Lesson 51) Implementing Customizer Sections & Settings Replace in front-page.php the static HTML for the Jumbotron heading, img, etc. and the highlight box text, icons, etc. with the values specified by the user via the Customizer.

--- a/style.css
+++ b/style.css
@@ -91,11 +91,12 @@ article.post img {
 }
 
 .jumbotron {
+    color: #fff;
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
     padding-top: 90px;
     padding-bottom: 90px;
-    background: url("../img/showcase.jpg");
+    min-height: 500px;
 }
 
 
