--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ article.post img {
     background: var(--color);
     color: #fff;
 }
+
 .panel {
     border: 1px solid #ddd;
     margin-bottom: 25px;
@@ -273,4 +274,55 @@ li.cat-item {
     background-color: #fff;
     border: 1px solid #ddd;
     list-style: none;
+}
+
+.comments {
+    border: 1px #ccc solid;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+.comments h2,
+.comments h3 {
+    background: var(--color);
+    color: #fff;
+    padding: 5px;
+}
+
+.comment-body {
+    border: #ccc 1px solid;
+    margin-bottom: 10px;
+    padding: 20px 10px;
+}
+
+.comment-meta {
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    overflow: auto;
+}
+
+.comment-meta img {
+    float: left;
+    margin-right: 10px;
+}
+
+.comment-meta time {
+    margin-left: 12px;
+}
+
+.comment-reply-link {
+    background: var(--color);
+    color: #fff;
+    display: inline-block;
+    padding: 10px 15px;
+}
+
+.comment-form input,
+.comment-form textarea {
+    width: 100%;
+    padding: 3px;
+    border: #ccc 1px solid;
+    margin-bottom: 20px;
 }
